--- a/index.html
+++ b/index.html
@@ -1,20 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystals Collector</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheets" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <!--Title-->
+        <div class="row">
+            <div class="col-md-6">
+                <h1>Crystals Collector!</h1>
+            </div>
+        </div>
+        <!--Directions-->
+        <div class="row">
+            <div class="col-md-6">
+                <p>You will be given a random number at the start of the game.</p>
+                <p>There are four crystals below. By clicking on a crystal, you will add a specific amount of points to
+                    your total score.</p>
+                <p>You win the game by matching your total score to the random number, and you lose the game if your
+                    total score goes above the random number.</p>
+                <p>The value of each crystal is hidden from you until you click on it.</p>
+                <p>Each time the game starts, the game will change the value of each crystal.</p>
+            </div>
+        </div>
+        <!--Random number and Score Counter-->
+        <div class="row">
+            <div class="col-md-4">
+                <span id="randomNumber"></span>
+            </div>
+            <div class="col-md-2">
+                <p>Wins: <span id="wins"></span></p>
+                <p>Losses: <span id="losses"></span></p>
+            </div>
+        </div>
+        <!--Gems-->
+        <div class="row">
+            <div class="col-md-3">
+                <img src="">
+            </div>
+            <div class="col-md-3">
+                <img src="">
+            </div>
+            <div class="col-md-3">
+                <img src="">
+            </div>
+            <div class="col-md-3">
+                <img src="">
+            </div>
+        </div>
+        <!--Total Score-->
+        <div class="row">
+            <div class="col-md-5">
+                <p>Your total score is:</p>
+                <span id="score"></span>
+            </div>
+        </div>
+    </div>
 
 
-    <script type="text/javascript" src = "assets/javascript/game.js">
-    
+    <script type="text/javascript" src="assets/javascript/game.js">
+
     </script>
 </body>
+
 </html>
