--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         </div>
         <!--Gems-->
         <div class="row">
-            <div class="col-md-3">
-                <img src="">
+            <div class="col-md-2 gem">
+                <img src="assets/images/iconfinder_Aquamarine_127303.png">
             </div>
-            <div class="col-md-3">
-                <img src="">
+            <div class="col-md-2 gem">
+                <img src="assets/images/iconfinder_Citrine_127311.png">
             </div>
-            <div class="col-md-3">
-                <img src="">
+            <div class="col-md-2 gem">
+                <img src="assets/images/iconfinder_Emerald_127302.png">
             </div>
-            <div class="col-md-3">
-                <img src="">
+            <div class="col-md-2 gem">
+                <img src="assets/images/iconfinder_diamond_gem_ruby_66340.png">
             </div>
         </div>
         <!--Total Score-->
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-
+<!--Link to external JavaScript File-->
     <script type="text/javascript" src="assets/javascript/game.js">
 
     </script>
