Added code to add gem value to total when clicked

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         </div>
         <!--Gems-->
         <div class="row">
-            <div class="col-md-2 gem">
+            <div class="col-md-2 gem" id="gem1">
                 <img src="assets/images/iconfinder_Aquamarine_127303.png">
             </div>
-            <div class="col-md-2 gem">
+            <div class="col-md-2 gem" id="gem2">
                 <img src="assets/images/iconfinder_Citrine_127311.png">
             </div>
-            <div class="col-md-2 gem">
+            <div class="col-md-2 gem" id="gem3">
                 <img src="assets/images/iconfinder_Emerald_127302.png">
             </div>
-            <div class="col-md-2 gem">
+            <div class="col-md-2 gem" id="gem4">
                 <img src="assets/images/iconfinder_diamond_gem_ruby_66340.png">
             </div>
         </div>
