--- a/index.html
+++ b/index.html
@@ -44,19 +44,8 @@
             </div>
         </div>
         <!--Gems-->
-        <div class="row">
-            <div class="col-md-2 gem" id="gem1">
-                <img src="assets/images/iconfinder_Aquamarine_127303.png">
-            </div>
-            <div class="col-md-2 gem" id="gem2">
-                <img src="assets/images/iconfinder_Citrine_127311.png">
-            </div>
-            <div class="col-md-2 gem" id="gem3">
-                <img src="assets/images/iconfinder_Emerald_127302.png">
-            </div>
-            <div class="col-md-2 gem" id="gem4">
-                <img src="assets/images/iconfinder_diamond_gem_ruby_66340.png">
-            </div>
+        <div class="row gems">
+            
         </div>
         <!--Total Score-->
         <div class="row">
