--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Crystals Collector</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheets" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
@@ -17,13 +17,13 @@
     <div class="container">
         <!--Title-->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12 text-center">
                 <h1>Crystals Collector!</h1>
             </div>
         </div>
         <!--Directions-->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 center directions">
                 <p>You will be given a random number at the start of the game.</p>
                 <p>There are four crystals below. By clicking on a crystal, you will add a specific amount of points to
                     your total score.</p>
@@ -35,23 +35,30 @@
         </div>
         <!--Random number and Score Counter-->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
+                <!--empty column-->
+            </div>
+            <div class="col-md-3 text-center randomNumber">
                 <span id="randomNumber"></span>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3 scores">
                 <p>Wins: <span id="wins"></span></p>
                 <p>Losses: <span id="losses"></span></p>
             </div>
         </div>
         <!--Gems-->
-        <div class="row gems">
-            
+        <div class="row">
+            <div class="col-md-3">
+                <!--empty column-->
+            </div>
+            <div class="col-md-6 gems">
+
+            </div>
         </div>
         <!--Total Score-->
         <div class="row">
-            <div class="col-md-5">
-                <p>Your total score is:</p>
-                <span id="score"></span>
+            <div class="col-md-6 text-center center total">
+                <p>Your total score is: <span id="score"></span></p>
             </div>
         </div>
     </div>
